src/css/contacts.css
.contact {
    padding: 64px 0;
    background-color: #FBF9F1;

    @media screen and (min-width: 768px) {}

    @media screen and (min-width: 1440px) {
        padding: 92px 0;
    }
}

.contact__container {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    gap: 32px;

    @media screen and (min-width: 768px) {
        gap: 80px;
    }

    @media screen and (min-width: 1440px) {
        flex-direction: row;
        justify-content: space-between;
        align-items: flex-start;
        gap: 24px;
    }
}

.contact__info {
    width: 100%;


    @media screen and (min-width: 1440px) {
        max-width: 644px;

        .contact__title_decor {
            width: 300px;
            height: 20px;
            margin-bottom: 24px;
        }
    }
}

.contact__title_decor {
    width: 300px;
    height: 20px;
    margin-bottom: 12px;

    @media screen and (min-width: 768px) {
        width: 250px;
        height: 20px;
    }

    @media screen and (min-width: 1440px) {
        width: 300px;
        height: 20px;
    }
}

.contact__title {
    text-align: center;
    margin-bottom: 24px;
    line-height: 1.1;
    color: #000;

    @media screen and (min-width: 768px) {
        font-size: 52px;
        text-align: left;
    }

    @media screen and (min-width: 1440px) {
        font-size: 64px;
    }
}

.contact__text {
    text-align: center;
    margin-bottom: 32px;
    max-width: 644px;
    font-size: 18px;
    line-height: 1.7;
    color: #000000;

    @media screen and (min-width: 768px) {
        text-align: left;
    }
}

.contact-form__title {
    font-size: 16px;
}

.contact-list {
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.contact-list__item {
    display: flex;
    align-items: center;
    gap: 18px;
}

.contact-list__icon {
    width: 24px;
    height: 24px;
    fill: #000000;
    stroke: black;
}

.contact-list__link,
.contact-list__address {
    font-size: 16px;
    line-height: 1.5;
    color: #000000;
    text-decoration: underline;
    transition: color .3s ease;
}

.contact-list__link:hover,
.contact-list__link:focus {
    color: #bea69e;
}

.contact__form-wrapper {
    width: 100%;

    @media screen and (min-width: 1440px) {
        width: 644px;
        height: 488px;
    }
}

.contact-form {
    display: flex;
    flex-direction: column;
    gap: 24px;
}

.contact-form__label {
    width: 100%;
}

.contact-form__input,
.contact-form__textarea {
    width: 100%;
    height: 40px;
    padding: 18px 20px;
    margin-top: 8px;

    border: 2px solid #000000;
    border-radius: 6px;

    background: #FBF9F1;

    font-size: 16px;
    line-height: 1.5;

    transition:
        border-color .3s,
        box-shadow .3s;
}

.contact-form__textarea {
    width: 100%;
    height: 180px;
}

.contact-form__input:focus,
.contact-form__textarea:focus {
    outline: none;
    border-color: #bea69e;
    box-shadow: 0 0 0 3px rgba(190, 166, 158, .2);
}

.contact-form__button {
    position: relative;

    display: inline-flex;
    justify-content: center;
    align-items: center;

    width: 100%;
    height: 44px;

    border: none;
    border-radius: 6px;

    background: #DCC110;
    color: #000;

    cursor: pointer;

    transition: .3s;
    margin: 0 auto;

    @media screen and (min-width: 768px) {
        width: 310px;
    }

}

.contact-form__button:hover {
    background: #fff;
    color: #000;
    border: 1px solid #DCC110;
}

.contact-button-text {
    transition: opacity .3s;
}

.contact-loader {
    position: absolute;

    width: 22px;
    height: 22px;

    border: 3px solid rgba(255, 255, 255, .4);
    border-top-color: #fff;

    border-radius: 50%;

    animation: spin .8s linear infinite;
}

.contact-hidden {
    display: none;
}

@keyframes spin {

    to {
        transform: rotate(360deg);
    }

}

